--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<%= form_with(model: current_user, local: true) do |f| %>
+<%= form_with(model: @user, local: true) do |f| %>
   <%= f.label :nickname %>
-  <%= f.text_field :nickname %>
+  <%= f.text_field :nickname, autofocus: true %>
   <%= f.label :email %>
   <%= f.email_field :email %>
   <%= f.label :password %>
