画像表示の実装

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
 <%= link_to "サインイン", new_user_session_path %>
 <% @posts.each do |post| %>
   <%= link_to post.user.nickname, user_path(post.user.id) %>
+  <%= image_tag post.image.variant(resize: '300x300') if post.image.attached? %>
   <%= post.asset %>
   <%= post.text %>
 <% end %>
