--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,6 +2,6 @@
   <%= render 'shared/error_messages', model: f.object %>
   <%= f.text_field :asset, placeholder: "総資産" %>
   <%= f.text_area :text, placeholder: "Text" %>
-  <%# <%= form.file_field :image %>
+  <%= f.file_field :image %>
   <%= f.submit "SEND" %>
 <% end %>
