詳細画面の実装

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,5 +9,6 @@
   <p><%= link_to post.user.nickname, user_path(post.user.id) %></p>
   <p><%= post.asset %></p>
   <p><%= post.text %></p>
+  <p><%= link_to "詳細", post_path(post.id) %>
 <% end %>
 </div>
