editのビューまで実装

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,3 +2,4 @@
 <p><%= link_to @post.user.nickname, user_path(@post.user.id) %></p>
 <p><%= @post.asset %></p>
 <p><%= @post.text %></p>
+<p><%= link_to "編集", edit_post_path(@post.id) %>
