destroyアクションの実装

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,3 +3,4 @@
 <p><%= @post.asset %></p>
 <p><%= @post.text %></p>
 <p><%= link_to "編集", edit_post_path(@post.id) %>
+<p><%= link_to "削除", post_path(@post.id), data: {turbo_method: :delete} %>
