コメント機能の実装

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,3 +8,9 @@
 <%= form_with(model: [@post, @comment], local: true) do |f| %>
 <%= f.text_area :text, placeholder: "コメントする" %>
 <%= f.submit "送信" %>
+<% end %>
+
+<% @comments.each do |comment| %>
+<p><%= comment.text %></p>
+<p><%= link_to comment.user.nickname, user_path(comment.user.id) %></p>
+<% end %>
