--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,18 @@
-<%= @user.nickname %>
-<%= @user.goal %>
-<%= link_to "情報変更", edit_user_path(@user.id) %>
+<% if current_user != @user %>
+  <% if @user.followed_by?(current_user) %>
+    <%=link_to "フォロー中", user_relationships_path(@user.id), data: { turbo_method: :delete } %>
+  <% else %>
+    <%=link_to "フォローする", user_relationships_path(@user.id), data: { turbo_method: :post } %>
+  <% end %>
+<% end %>
+<p><%= @user.nickname %></p>
+<p><%= @user.goal %></p>
+<p><%= link_to "情報変更", edit_user_path(@user.id) %></p>
+<h3>フォロー</h3>
+<% @user.followings.each do |user| %>
+  <p class=“f-user”><%= link_to user.name, user_path(user.id) %></p>
+<% end %>
+<h3>フォロワー</h3>
+<% @user.followers.each do |user| %>
+  <%= link_to user.name, user_path(user.id) %></p>
+<% end %>
