--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
 <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
 <%= link_to "サインアップ", new_user_registration_path %>
 <%= link_to "サインイン", new_user_session_path %>
+<%= link_to current_user.nickname, user_path(current_user.id) %>
 <div>
 <% @posts.each do |post| %>
   <p><%= image_tag post.image.variant(resize: '300x300') if post.image.attached? %></p>
