--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(url: search_posts_path, local: true, method: :get) do |form| %>
+<%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form| %>
   <%= form.text_field :keyword, placeholder: "投稿を検索する" %>
   <%= form.submit "検索" %>
 <% end %>
