--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,11 @@
   <%= form.text_field :keyword, placeholder: "投稿を検索する" %>
   <%= form.submit "検索" %>
 <% end %>
+<!--ニュースリンク -->
+<%= link_to "日本経済新聞", "https://www.nikkei.com/" %>
+<%= link_to "NEWS PICKS", "https://newspicks.com/" %>
+
+<!--下から投稿内容 -->
 <h1>Hello World</h1>
 <%= link_to "投稿", new_post_path %>
 <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
