--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
 <% end %>
 <p><%= @user.nickname %></p>
 <p><%= @user.goal %></p>
+<p><%= @user.style.name %></p>
 <p><%= link_to "情報変更", edit_user_path(@user.id) %></p>
 <h3>フォロー</h3>
 <% @user.followings.each do |user| %>
